# cpp-aspartame

./: CMakeLists.txt
bench/: CMakeLists.txt  main.cc
src/aspartamev0/: itf-opt.h  opt.cc  opt.h  optarr.cc  optarr.h
tests/: CMakeLists.txt  dumb.cc
tests/opt/: optnum.cc  optstr.cc
tests/optarr/: optnum.cc
